// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A Melodies test suite > should generate melodies based on a movement timeline - free rhythm 1`] = `
[
  {
    "dur": 240,
    "isRest": false,
    "midi": 88,
    "next": 240,
    "note": "E5",
    "time": 0,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 86,
    "next": 720,
    "note": "D5",
    "time": 240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 86,
    "next": 1200,
    "note": "D5",
    "time": 720,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 88,
    "next": 1440,
    "note": "E5",
    "time": 1200,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 82,
    "next": 1920,
    "note": "A#4",
    "time": 1440,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 2160,
    "note": "C#4",
    "time": 1920,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 2480,
    "note": "E4",
    "time": 2160,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 75,
    "next": 2720,
    "note": "D#4",
    "time": 2480,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 80,
    "next": 2880,
    "note": "G#4",
    "time": 2720,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 82,
    "next": 3360,
    "note": "A#4",
    "time": 2880,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 83,
    "next": 3840,
    "note": "B4",
    "time": 3360,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 82,
    "next": 4320,
    "note": "A#4",
    "time": 3840,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 4560,
    "note": "C#4",
    "time": 4320,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 4880,
    "note": "E4",
    "time": 4560,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 75,
    "next": 5120,
    "note": "D#4",
    "time": 4880,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 80,
    "next": 5280,
    "note": "G#4",
    "time": 5120,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 82,
    "next": 5760,
    "note": "A#4",
    "time": 5280,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 6000,
    "note": "C#4",
    "time": 5760,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 6320,
    "note": "E4",
    "time": 6000,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 75,
    "next": 6560,
    "note": "D#4",
    "time": 6320,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 80,
    "next": 6720,
    "note": "G#4",
    "time": 6560,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 82,
    "next": 7200,
    "note": "A#4",
    "time": 6720,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 83,
    "next": 7680,
    "note": "B4",
    "time": 7200,
  },
]
`;

exports[`A Melodies test suite > should generate melodies based on a movement timeline - turn rhythm 1`] = `
[
  {
    "dur": 480,
    "isRest": false,
    "midi": 88,
    "next": 480,
    "note": "E5",
    "time": 0,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 86,
    "next": 960,
    "note": "D5",
    "time": 480,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 1280,
    "note": "E5",
    "time": 960,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 1440,
    "note": "E5",
    "time": 1280,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 1920,
    "note": "F#5",
    "time": 1440,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 2240,
    "note": "E5",
    "time": 1920,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 2400,
    "note": "E5",
    "time": 2240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 2880,
    "note": "F#5",
    "time": 2400,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 3200,
    "note": "E5",
    "time": 2880,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 3360,
    "note": "E5",
    "time": 3200,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 3840,
    "note": "F#5",
    "time": 3360,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 4160,
    "note": "E5",
    "time": 3840,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 4320,
    "note": "E5",
    "time": 4160,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 4800,
    "note": "F#5",
    "time": 4320,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 5120,
    "note": "E5",
    "time": 4800,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 5280,
    "note": "E5",
    "time": 5120,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 5760,
    "note": "F#5",
    "time": 5280,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 6080,
    "note": "E5",
    "time": 5760,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 6240,
    "note": "E5",
    "time": 6080,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 6720,
    "note": "F#5",
    "time": 6240,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 88,
    "next": 7040,
    "note": "E5",
    "time": 6720,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 7200,
    "note": "E5",
    "time": 7040,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 7680,
    "note": "F#5",
    "time": 7200,
  },
]
`;

exports[`A Melodies test suite > should generate progression with defined structures 1`] = `
[
  {
    "dur": 320,
    "isRest": false,
    "midi": 56,
    "next": 320,
    "note": "Ab2",
    "time": 0,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 54,
    "next": 480,
    "note": "Gb2",
    "time": 320,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 960,
    "note": "Ab2",
    "time": 480,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 1440,
    "note": "Ab2",
    "time": 960,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 1920,
    "note": "Ab2",
    "time": 1440,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 2400,
    "note": "Ab2",
    "time": 1920,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 2880,
    "note": "Ab2",
    "time": 2400,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 3360,
    "note": "Ab2",
    "time": 2880,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 56,
    "next": 3840,
    "note": "Ab2",
    "time": 3360,
  },
]
`;
